fix: changes z-index of cocktail

--- a/public/kah/FY24_Kahluah_Milk_Spring_Display_Banners_300x600/FY26_KAH_Dunkin_Trade_Desk_styles_300x600.css
+++ b/public/kah/FY24_Kahluah_Milk_Spring_Display_Banners_300x600/FY26_KAH_Dunkin_Trade_Desk_styles_300x600.css
@@ -114,7 +114,7 @@ img { position:absolute; }
 width:100%;
 height:100%;
 left: 228px;
-top: 15px;
+top: 19px;
 z-index: 13;
 opacity: 0;
 }
@@ -122,7 +122,7 @@ opacity: 0;
 #liqor {
 left: 144px;
 top: 276px;
-z-index:10;
+z-index:13;
 }
 
 /*lockup*/
